k8s/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: cloudserve
  name: api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: ghcr.io/venkatakrishna8730/cloudserve-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  namespace: cloudserve
  name: api-service
spec:
  selector:
    app: api
  ports:
    - port: 5000
      targetPort: 5000
