k8s/sandbox.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sandbox-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sandbox
  template:
    metadata:
      labels:
        app: sandbox
    spec:
      containers:
        - name: sandbox
          image: cloudserve-sandbox
          imagePullPolicy: Never
          ports:
            - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: sandbox-service
spec:
  selector:
    app: sandbox
  ports:
    - port: 5002
      targetPort: 5002
