k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: cloudserve
  name: cloudserve-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: cloudserve.local.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 5000

          - path: /run
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 5001

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
